<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) trippay.io 2021-2021.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bearchoke</groupId>
    <artifactId>spring-authorization-server-mongodb</artifactId>
    <version>0.0.1</version>
	<packaging>pom</packaging>
    <name>spring-authorization-server-mongodb</name>
    <description>An implementation of RegisteredClientService, AuthorizationService and AuthorizationConsentService with spring-data-mongodb</description>
    <inceptionYear>2022</inceptionYear>

    <organization>
        <name>Bearchoke</name>
        <url>https://www.bearchoke.org</url>
    </organization>

    <developers>
        <developer>
            <id>1</id>
            <name>Bjorn Harvold</name>
            <email>bjorn@harvold.com</email>
            <url>https://www.bearchoke.org</url>
            <organization>Bearchoke</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:ssh://github.com:bjornharvold/spring-authorization-server-mongodb.git</connection>
        <developerConnection>scm:git:ssh://github.com:bjornharvold/spring-authorization-server-mongodb.git</developerConnection>
        <url>https://github.com/bjornharvold/spring-authorization-server-mongodb</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <buildnumber.maven.plugin.version>1.4</buildnumber.maven.plugin.version>
        <gitflow.maven.plugin>1.16.0</gitflow.maven.plugin>
        <java.version>17</java.version>
        <lombok.version>1.18.22</lombok.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
        <maven.deploy.plugin.version>3.0.0-M1</maven.deploy.plugin.version>
        <maven.javadoc.plugin.version>3.3.1</maven.javadoc.plugin.version>
        <maven.release.plugin.version>3.0.0-M4</maven.release.plugin.version>
        <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
        <maven.scm.plugin.version>1.12.0</maven.scm.plugin.version>
        <maven.source.plugin.version>3.0.1</maven.source.plugin.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
        <spring.data.mongodb.version>3.3.0</spring.data.mongodb.version>
        <spring.security.oauth2.authorization.server.version>0.2.1</spring.security.oauth2.authorization.server.version>
        <versions.maven.plugin>2.8.1</versions.maven.plugin>
    </properties>

    <!-- Common dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-mongodb</artifactId>
            <version>${spring.data.mongodb.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Spring Oauth2 Auth server -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-authorization-server</artifactId>
            <version>${spring.security.oauth2.authorization.server.version}</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>compile</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>${maven.scm.plugin.version}</version>
                <configuration>
                    <connectionType>developerConnection</connectionType>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>true</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                    <goals>deploy</goals>
                    <connectionUrl>${project.scm.developerConnection}</connectionUrl>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>${gitflow.maven.plugin}</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions.maven.plugin}</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>${buildnumber.maven.plugin.version}</version>
                <configuration>
                    <shortRevisionLength>7</shortRevisionLength>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <format>{0,date,yyyyMMdd-HHmmss}-{1}</format>
                    <items>
                        <item>timestamp</item>
                        <item>scmVersion</item>
                    </items>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <fork>true</fork>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                </configuration>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>generate-javadoc-json</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>javadoc-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xmx4096m</argLine>
                    <argLine>
                        --add-opens java.base/java.time=ALL-UNNAMED
                    </argLine>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Documentation.java</include>
                    </includes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}/static/docs</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/generated-docs</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <repositories>

        <!-- Maven repository -->
        <repository>
            <id>maven</id>
            <name>Maven repo</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>

    </repositories>

</project>
